src/tests/snapshots/gitu__tests__stash__stash_apply_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
 stash@1 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Apply stash (default 0): › █                                                  |
styles_hash: 57707ad00ed829a4
