src/tests/snapshots/gitu__tests__stash__stash_keeping_index_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Stash message: › █                                                            |
styles_hash: cf71f21e02e3f49d
