src/tests/snapshots/gitu__tests__stash__stash_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Stash message: ›                                                              |
styles_hash: 7498c0da41d08f2d
